--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-lg-10" >
                 <div class="card card-sign" style="height:100%;">
                     <form class="form-signin front">
-                        <a href=".]/index.html"><img class="card-img-top" src="./img/Logo.png" alt="Card image"></a>
+                        <a href="./index.html"><img class="card-img-top" src="./img/Logo.png" alt="Card image"></a>
                         <h1 class="h3 displya-5 mt-3 mb-3" id="title" ><strong>歡迎來到Mountain</strong></h1>
                         <p class="card-text"><small class="text-muted">登入你的帳號</small></p>
                         <div class="form-label-group   mb-5">
